--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -40,6 +41,7 @@
     "@trpc/client": "^11.8.1",
     "@trpc/server": "^11.8.1",
     "@trpc/tanstack-react-query": "^11.8.1",
+    "better-auth": "^1.4.12",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
@@ -50,12 +52,14 @@
     "lucide-react": "^0.562.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
+    "pg": "^8.17.1",
     "react": "19.1.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.71.0",
     "react-resizable-panels": "^4.3.3",
     "recharts": "^2.15.4",
+    "resend": "^6.7.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
@@ -65,6 +69,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "prisma": "^7.2.0",
