--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "resend": "^6.7.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
+    "superjson": "^2.2.6",
     "tailwind-merge": "^3.4.0",
     "unique-names-generator": "^4.7.1",
     "vaul": "^1.1.2",
