--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "embla-carousel-react": "^8.6.0",
     "inngest": "^3.49.2",
     "input-otp": "^1.4.2",
+    "jotai": "^2.17.1",
     "lucide-react": "^0.562.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
