--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "sonner": "^2.0.7",
     "superjson": "^2.2.6",
     "tailwind-merge": "^3.4.0",
+    "toposort": "^2.0.2",
     "unique-names-generator": "^4.7.1",
     "vaul": "^1.1.2",
     "zod": "^4.3.5"
@@ -87,6 +88,7 @@
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/toposort": "^2.0.7",
     "prisma": "^7.2.0",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
